Fix gap on navbar item mobile hover

--- a/src/style.css
+++ b/src/style.css
@@ -291,7 +291,7 @@ main p:last-child {
   }
 
   nav ul li a {
-    padding: 0.5rem;
+    padding: 1rem 0.5rem;
   }
 
   main > section > h2 {
